refactor: 메소드, 변수명, static method로 변경
- Separator, Joiner 단순 유틸리티 기능이기에 static 메소드로 변경